// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tt.html - {"htmlWhitespaceSensitivity":"ignore"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html - {"htmlWhitespaceSensitivity":"strict"} format 1`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div> </div>

================================================================================
`;

exports[`tt.html - {"printWidth":"Infinity"} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: Infinity
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html - {"printWidth":1} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 1
 | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html 2`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 1
 | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html 3`] = `
====================================options=====================================
parsers: ["html"]
printWidth: Infinity
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html 4`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "strict"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div> </div>

================================================================================
`;

exports[`tt.html 5`] = `
====================================options=====================================
htmlWhitespaceSensitivity: "ignore"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;

exports[`tt.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div> </div>
=====================================output=====================================
<div></div>

================================================================================
`;
